Travis Send to Server

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: node_js
-node_js:
-- '8'
+node_js: stable
 install:
 - npm install
 script:
 - npm test
 - npm build
+before_install:
+- openssl aes-256-cbc -K $encrypted_7754af85956f_key -iv $encrypted_7754af85956f_iv
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- echo -e "Host 173.255.241.13\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+after_success:
+- chmod 600 ~/.ssh/id_rsa
+- scp -o stricthostkeychecking=no -r ./_ToDoList-React/* river7527@173.255.241.13:/npm_workspace/
