--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 - echo -e "Host 173.255.241.13\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 after_success:
 - chmod 600 ~/.ssh/id_rsa
-- scp -o stricthostkeychecking=no -r ./_ToDoList-React/* river7527@173.255.241.13:/npm_workspace/
+- ssh river7527@173.255.241.13 'cd /var/www && git pull'
