github pages travis

--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "build": "react-scripts build"
-  }
+  },
+  "homepage": "https://zhengyangca.github.io/ToDoList-React/"
 }
