--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: node_js
 node_js: stable
-branchs:
-  only:
-  - master
+cache:
+  directories:
+  - node_modules
 install:
 - npm install
 script:
 - npm test
-- npm build
-addons:
-  ssh_known_hosts: 47.55.217.201
-before_install:
-- openssl aes-256-cbc -K $encrypted_7754af85956f_key -iv $encrypted_7754af85956f_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
-after_success:
-- chmod 600 ~/.ssh/id_rsa
-- ssh river7527@173.255.241.13 -o StrictHostKeyChecking=no 'cd ~/npm_workspace/todolist/ToDoList-React && git pull && npm install'
+- npm run build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $github_token
+  local_dir: build
+  on:
+    branch: github-pages-dev
