--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
     "test": "react-scripts test --env=jsdom",
     "build": "react-scripts build"
   },
-  "homepage": "https://zhengyangca.github.io/ToDoList-React/"
+  "homepage": "https://zhengyangca.github.io/ToDoList-React-TravisCI/"
 }
